2008-01-15 Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>

	* initialize some priv-> member in TnyMaemoConicDevice

2008-01-14  Philip Van Hoof <pvanhoof@gnome.org>

	* Some aggresive memory checking revealed a few interesting memory
	leaks. This commit fixes those. The fixes are experimental, although
	most of them double checked.

	CamelOperation holds one more significant memory leak at its
	status_hack linked list. That one is not yet fixed.
	* Flag setting to 0xffff must be 0x1fff as bit 13 and 14 are system
	bits that should not be altered like that.

2008-01-13  Philip Van Hoof <pvanhoof@gnome.org>

	* Changed tny_mime_part_construct_from_stream to
	tny_mime_part_construct, added a parameter for the
	content-transfer-encoding too

	* This was a major API change

2008-01-12  Philip Van Hoof <pvanhoof@gnome.org>

	* Merged camel-lite with Camel upstream rev. 8360
	* Added an extra check around a strcmp that seems to have caused a 
	crash once
	* Size determining when adding items to a local maildir folder
	* Content-Transfer-Encoding when adding MIME parts
	* Maildir folders are always subscribed
	* Non existing UIDs when BODY.PEEK-ing

2008-01-11  Philip Van Hoof <pvanhoof@gnome.org>

	* Preparations for the new summary store
	* Made all remaining static libraries LTLIBRARIES
	* Fixed compiler warnings

2008-01-11 Alberto Garcia Gonzalez <agarcia@igalia.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	fix typo that caused a compilation error

2008-01-10 Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>
	
	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store-summary:
	fix typo in camel-imap-store-summary.c which caused valgrind errors

2008-01-09  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-store-tree-model.c:
	(creater): added some checks in order to properly detect the parent of
	the newly created folder

2008-01-09  Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>
	