@@ -49,7 +49,7 @@
 #define NONBLOCKING_READ_TIMEOUT 0
 #define NONBLOCKING_WRITE_TIMEOUT 0
 
-#define CONNECT_TIMEOUT 30
+#define CONNECT_TIMEOUT 15
 
 
 G_BEGIN_DECLS
