@@ -249,12 +249,11 @@ tny_gnome_device_new (void)
 static void
 tny_gnome_device_finalize (GObject *object)
 {
-	TnyGnomeDevice *self = (TnyGnomeDevice *)object;	
+	TnyGnomeDevice *self = (TnyGnomeDevice *)object;
 	TnyGnomeDevicePriv *priv = TNY_GNOME_DEVICE_GET_PRIVATE (self);
 
 #ifdef GNOME
-	if (!priv->invnm)
-	{
+	if (!priv->invnm) {
 		libnm_glib_unregister_callback (priv->nm_ctx, priv->callback_id);
 		libnm_glib_shutdown (priv->nm_ctx);
 	}
