@@ -1,3 +1,7 @@
+2008-01-15  Philip Van Hoof <pvanhoof@gnome.org>
+
+	* Better error reporting on connection failures
+
 2008-01-15 Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>
 
 	* initialize some priv-> member in TnyMaemoConicDevice
